ImputerExperiments/data/logs/outputs/output.919741_12.out
Run: 12
/cm/local/apps/slurm/var/spool/job919741/slurm_script: line 26: 
pip install -e tpot2
pip install -r tpot2/ImputerExperiments/requirements_.txt
: No such file or directory
RunStart
Traceback (most recent call last):
  File "/common/ketrong/tpotexp/tpot2/ImputerExperiments/Locally_run_code/main.py", line 10, in <module>
    import utils
  File "/common/ketrong/tpotexp/tpot2/ImputerExperiments/Locally_run_code/utils.py", line 390
    num_iter = 
               ^
SyntaxError: invalid syntax
srun: error: esplhpc-cp001: task 0: Exited with exit code 1
